--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JQuery Intro</title>
-    <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.3.1.js"></script>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <h1>JQuery Intro</h1>
+    <h2>Get and Set me!</h2>
+    <input id='nameInput'/>
+    <button id="clickableButton">Add person</button>
+    <button id="secondButton">Click me too</button>
+
+    <ul id="personList">
+    </ul>
     
 </body>
 </html>
